[package]
name = "cetkaik_core"
version = "0.9.99"
authors = ["jekto_vatimeliju <jekto.vatimeliju@gmail.com>"]
edition = "2021"
description = "DEPRECATED in favor of https://crates.io/crates/cetkaik_fundamental and https://crates.io/crates/cetkaik_naive_representation"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
